updates index.html v2

--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-	  <title>Welcome  to DevOps training </title>
+	  <title>Welcome  to worldclass DevOps training </title>
 	   
   </head>
   <body bgcolor=white>
@@ -16,6 +16,6 @@
       </tr>
     </table>
 
-    <p>This session is to demonstrate how to setup Git-github</p>
+    <p>This session is to demonstrate how to setup Git and github</p>
   </body>
 </html>
